deployment/gitbook-svc.yaml
apiVersion: v1     
kind: Service    
metadata:
  namespace: gitbook
  name: tcpdump-book  
spec:
  type: ClusterIP  
  selector:
    app: tcpdump-book 
  ports:      
  - name: http
    port: 80
    targetPort: 80
