deployment/gitbook-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: gitbook
  name: tcpdump-book
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - secretName: "wildcard-tls"
  rules:
  - host: tcpdump-book.domain
    http:
      paths:
      - backend:
          serviceName: tcpdump-book
          servicePort: http
        path: /
