deployment/gitbook.yaml
apiVersion: apps/v1     
kind: Deployment 
metadata:
  namespace: gitbook
  name: tcpdump-book 
spec:
  replicas: 2 
  selector:                     
    matchLabels: 
      app: tcpdump-book 
  template:        
    metadata:
      labels: 
        app: tcpdump-book
    spec:   
      containers:
      - name: tcpdump-book
        image: <IMAGE>:<BUILD_TAG>
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80  
        resources:
          limits:
            cpu: 0.5
            memory: "500Mi"
      imagePullSecrets:
        - name: dockerhub
---
apiVersion: v1     
kind: Service    
metadata:
  namespace: gitbook
  name: tcpdump-book  
spec:
  type: ClusterIP  
  selector:
    app: tcpdump-book 
  ports:      
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: gitbook
  name: tcpdump-book
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - secretName: "wildcard-tls"
  rules:
  - host: tcpdump-book.domain.com
    http:
      paths:
      - backend:
          serviceName: tcpdump-book
          servicePort: http
        path: /
